<resources>
    <string name="app_name">VINSearcher</string>
    <string name="menu_item_liked">Liked</string>
    <string name="menu_item_history">History</string>
    <string name="menu_item_liked_description">Liked</string>
    <string name="menu_item_history_description">History</string>
    <string name="item_header_placeholder">Car VIN</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_to_info_transition">main_recycler_item_to_info_fragment</string>
    <string name="card_header">card header</string>
    <string name="card_title_placeholder">Card Title</string>
    <string name="card_description">card description</string>
    <string name="card_description_placeholder">Card Description</string>
    <string name="edit_text_enter_vin">Enter car VIN here...</string>
    <string name="search_button_text">Search</string>
</resources>