<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.CarInfoFragment"
    android:transitionName="@string/main_to_info_transition"
    android:background="@drawable/surface_pad"
    android:layout_margin="5dp"
    android:elevation="8dp"
    android:clipToPadding="false"
    android:clipChildren="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/card_header"
            android:text="@string/card_title_placeholder"
            android:textSize="18sp"
            android:padding="10dp"

            android:id="@+id/car_info_title"
            android:layout_alignParentTop="true"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/car_info_image_layout"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/car_info_title">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher_background"

                android:id="@+id/car_info_image"
                android:visibility="gone"/>

            <ProgressBar
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"

                android:id="@+id/car_info_progress_bar"
                android:visibility="gone"
                />

        </RelativeLayout>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/card_description"
            android:text="@string/card_description_placeholder"
            android:textSize="14sp"
            android:padding="10dp"

            android:id="@+id/car_info_description"
            android:layout_below="@id/car_info_image_layout"/>


    </RelativeLayout>

</androidx.cardview.widget.CardView>