<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="15dp"
    android:background="@drawable/surface_pad_ripple"
    android:elevation="6dp"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:transitionName="@string/main_to_info_transition">

    <TextView
        android:id="@+id/main_recycler_car_item_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/item_header_placeholder"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:id="@+id/main_recycler_car_item_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_recycler_car_item_header"
        android:text="@string/lorem_ipsum"
        android:textSize="16sp" />

    <ProgressBar
        android:id="@+id/main_recycler_progress"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignBottom="@+id/main_recycler_car_item_content"
        android:layout_alignEnd="@+id/main_recycler_car_item_content"
        android:layout_margin="5dp"
        android:visibility="visible"
        />

    <ImageView
        android:id="@+id/main_recycler_iv_success"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignEnd="@id/main_recycler_car_item_content"
        android:layout_alignBottom="@id/main_recycler_car_item_content"
        android:layout_margin="5dp"
        android:src="@drawable/ic_baseline_check_24"
        android:visibility="gone"
        />

</RelativeLayout>